@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-12-09T08:16:58Z",
+  "timestamp" : "2022-12-09T16:18:25Z",
   "count_outdated" : 707,
   "uniques_outdated" : 399,
   "count" : 728,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-11-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
