@@ -1,10 +1,10 @@
 {
-  "count": 20,
+  "count": 19,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-11-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
